# crud-redis-fastapi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
redis-crud/: main.py
redis-crud/data/: products.json  products.py
redis-crud/db/: connection.py  crud.py
redis-crud/routes/: products.py
redis-crud/schemas/: products.py
