[tool.poetry]
name = "redis-tutorial"
version = "0.1.0"
description = ""
authors = ["Peter <pwsandoval@outlook.com>"]
readme = "README.md"
packages = [{include = "redis_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
redis = "^4.4.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
